[refs #80505] Fix breadcrumb wrong position.

--- a/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
+++ b/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
@@ -6450,10 +6450,13 @@ body {
   margin-top: 30px;
 }
 
+.userrole-anonymous .breadcrumbs {
+  margin-top: -28px;
+}
+
 .breadcrumbs {
   padding-top: 10px;
-  padding-left: 10px;
-  margin-top: -28px; }
+  padding-left: 10px; }
   .breadcrumbs .breadcrumb {
     padding: 0px;
     background: transparent; }
